# seekforge

./: .gitignore  AGENTS.md  AUDIT.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  README.zh-CN.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
apps/desktop/src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/icons/: icon.icns  make_icon.py
apps/desktop/src-tauri/src/: main.rs  serve.rs
crates/runtime/: Cargo.toml  PROTOCOL.md
crates/runtime/src/: command.rs  edit.rs  fs.rs  git.rs  main.rs  protocol.rs  sandbox.rs
crates/runtime/tests/: protocol.rs
docs/: EVALS.md  EVALS.zh-CN.md  README.md  README.zh-CN.md  RELEASING.md  RELEASING.zh-CN.md  architecture.md  architecture.zh-CN.md  automation.md  automation.zh-CN.md  boundary-checklist.md  boundary-checklist.zh-CN.md  browser.md  browser.zh-CN.md  cli-reference.md  cli-reference.zh-CN.md  configuration.md  configuration.zh-CN.md  cookbook.md  cookbook.zh-CN.md  core-package-policy.md  core-package-policy.zh-CN.md  github.md  github.zh-CN.md  loop-engineering.md  loop-engineering.zh-CN.md  loop-tutorial.md  loop-tutorial.zh-CN.md  low-end-model-audit.md  low-end-model-audit.zh-CN.md  lsp.md  lsp.zh-CN.md  mcp.md  mcp.zh-CN.md  migration.md  migration.zh-CN.md  plugins.md  plugins.zh-CN.md  remote.md  remote.zh-CN.md  (+12 more)
evals/: README.md  baseline.json  config.json  round-52-measurements.md
scripts/: build-sidecar.mjs  build-sidecar.test.mjs  npm-pack-smoke.mjs  playwright-smoke.mjs  release.mjs  release.test.mjs  serve-e2e.mjs  workflows.test.mjs
spikes/: 01-tool-calling-reliability.ts  02-edit-format-success.ts  README.md
(+1031 files in other folders)
