[package]
name = "seekforge-desktop"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
description = "Tauri desktop shell for SeekForge: spawns `seekforge serve` and opens the workbench"

[[bin]]
name = "seekforge-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
