[package]
name = "seekforge-desktop"
version = "0.7.0"
edition = "2021"
license.workspace = true
repository.workspace = true
description = "Tauri desktop shell for SeekForge: spawns `seekforge serve` and opens the workbench"

[[bin]]
name = "seekforge-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
# generate_context! references ::serde_json when tauri.conf.json has a
# `plugins` section (updater config) — must be a direct dependency.
serde_json = "1"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
